==Revisions==
===Last version===
* Last version: 60007 at <not yet released>
* Bugs or suggestions can be posted to the Rewatch addon page at http://www.curse.com/addons/wow/rewatch

===Changelog===
====60007===
* Bugfix for the offspec support (Feral, thanks Krueger81, scifiaku and Weavil!)
====60006===
* Fixed check for resto-only spells when creating buttons
* Added support for offspecs without resto affinity
====60005===
* Removed some old spells and functionality (deprecated)
* Fixed refresh of Lifebloom bar when casting Regrowth / Healing Touch
* Added button configuration - add which ever spells you want, in the order you want, just the way you want!
* Removed ForcedHeight setting (replaced)
* Added "Organise frames in columns", where the behaviour of the setting "Number of player frames each lines" will apply to columns instead of rows
* Changed default layouts Normal and Compact to use "Organise frames in columns"
====60004===
* Updated version for patch
* Fixed localizations
* Changed CooldownFrame_SetTimer to CooldownFrame_Set
* Removed glyph checks
* Added support for Flourish 
====60003===
* Fixed mana/rage/energy bar colouring
* Small fix in the incoming-heal-bar height
* Change ruRU localization encoding to UTF-8 without BOM (should fix Rewatch for Russian clients, now!)
* Border size fix, now it finally aligns properly!
* Background transparency fix, it's now solid when you want it to be!
* Fix incoming heals display
* Changed dead and out-of-range display of players
====60002===
* Fixed Germination support, added a small bar inside the Reju bar to track it!
* Changed frame positioning, so Germination bar is properly shown and does not hide between the Reju bar
* Default Health bar colour changed
* Default frame background colour changed
* Now made health bar colouring with health deficiency scaling rather than fixed colours
* Changes mana bar to be 20% of the Healthbar height (used to be 4 pixels default)